# 3d-engine

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/ECS/: ComponentStorage.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h  SparseSet.h
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tests/: CMakeLists.txt  EntityRegistryTest.cpp  SparseSetTest.cpp
